--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,15 @@
 .gradient{
 background: linear-gradient(0deg, #121212,#121212,#121212,#121212 , #0c662f );
 }
+
+.carousel{
+  outline:0;
+  outline:none;
+
+}
+
+.carousel-cell {
+  width: 50%; /* half-width */
+  height: 160px;
+  margin-right:-20px;
+}
